@@ -1,3 +1,9 @@
+2008-02-03  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* gtksourceview2.defs: define NULL as default for catogory params.
+	
+	* docs/reference/gtksourceview2-gtksourcebuffer.xml: fix the docs.
+
 2008-02-01  Paolo Borelli  <pborelli@katamail.com>
 
 	* gtksourceview2.override: fix various issues with some of the marks
